--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <div  style="padding-top: 0px;padding-bottom: 0px;" class="front_content">
         <div class="title" style="background-color: #EEEEEE;  margin-bottom: 10px;">
-            <h1 style="color:#1e90ff;margin-top: 8px;margin-bottom: 8px;">Need for Water Conservation</h1>
+            <h1 style="color:#1e90ff;margin-top: 8px;margin-bottom: 8px;">Why Water Conservation</h1>
         </div>
         <div class="content container">
             <h6 class="why_content">Water conservation is crucial for several reasons, impacting the environment, economy, and human health. Here are the key reasons why conserving water is important:</h3>
